force-app/main/default/objects/HRCSVC_Remote_Access__c/HRCSVC_Remote_Access__c.object-meta.xml
<CustomObject>
    <label>Remote Access</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Remote Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>