force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Location__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Remote Access</relationshipLabel>
    <relationshipName>Remote_Access</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>