force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>