force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Password__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>