force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Remote_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Remote_Access_Type__c</fullName>
    <label>Remote Access Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>