force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Server_IP__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Server_IP__c</fullName>
    <label>Server IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>