force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Server_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Server_Name_Type__c</fullName>
    <label>Server Name/Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>