force-app/main/default/objects/HRCSVC_Remote_Access__c/fields/HRCSVC_Username__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Username__c</fullName>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>